[package]
name = "penumbra-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jmt = { git = "https://github.com/penumbra-zone/jmt", branch = "main" }
tokio = { version = "1.21.1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.11" }
sha2 = "0.9"
tempfile = "3.3.0"
anyhow = "1"
once_cell = "1.8"
bincode = "1.3"
async-trait = "0.1.52"
async-stream = "0.3.3"
tracing = "0.1"
rocksdb = "0.19.0"
futures = "0.3"
tonic = "0.8.1"
hex = "0.4"
metrics = "0.19.0"
parking_lot = "0.12"

# Tendermint/IBC crates 
ics23 = "=0.8.1"
tendermint = "0.26.0"
ibc-proto = "0.22.0"
ibc = "0.23.0"

[dev-dependencies]
tempfile = "3.3.0"
tracing-subscriber = "0.3"
tokio = "1.21.1"
