[package]
name = "penumbra-storage"
version = "0.52.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jmt = "0.4"
tokio = { version = "1.21.1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.11" }
tempfile = "3.3.0"
anyhow = "1"
async-trait = "0.1.52"
tracing = "0.1"
rocksdb = "0.19.0"
futures = "0.3"
hex = "0.4"
metrics = "0.19.0"
parking_lot = "0.12"
pin-project = "1.0.12"
smallvec = { version = "1.10" , features = ["union" , "const_generics"] }

# Tendermint/IBC crates 
ics23 = "0.9.0"
tendermint = { version = "0.29.0", default-features = false }
sha2 = "0.10.6"

[dev-dependencies]
tempfile = "3.3.0"
tracing-subscriber = "0.3"
tokio = "1.21.1"
