[package]
name = "penumbra-tct-property-test"
version = "0.51.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
# sqlx = { version = "0.5.9", features = ["postgres", "runtime-tokio-rustls"] }
anyhow = "1"
static_assertions = "1"
proptest = "1"
proptest-derive = "0.3"
penumbra-tct = { path = "../tct", features = ["arbitrary"] }
tokio = { version = "1.21.1", features = ["full"] }
futures = "0.3"
