[package]
name = "tct-spec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penumbra-tct = { path = "../tct", features = ["internal"] }
parking_lot = "0.12"
decaf377 = { git = "https://github.com/penumbra-zone/decaf377" }
poseidon377 = { git = "https://github.com/penumbra-zone/poseidon377" }