[package]
name = "penumbra-tct-visualize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We are visualizing the TCT, so we need to import it
penumbra-tct = { path = "../tct", features = ["arbitrary"] }
decaf377 = "0.2"

# Dependencies for live-view server
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tonic = { version = "0.8.1" }
prost = { version = "0.11" }
tokio-stream = { version = "0.1" }
axum = { version = "0.5", features = ["headers", "query"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
serde_json = { version = "1", features = ["preserve_order"] }
include-flate = { version = "0.1", features = ["stable"] }
bytes = { version = "1.2" }
parking_lot = "0.12"
rand = "0.8"
serde = "1.0"
futures = "0.3"
serde_urlencoded = "0.7"
clap = { version = "3.2", features = ["derive"] }
tower-http = { version = "0.3", features = ["trace"] }
anyhow = "1.0"
rand_distr = "0.4"
tracing-subscriber = "0.3.15"
hex = "0.4"
rand_chacha = "0.3"

[[bin]]
name = "tct-visualize"

[[bin]]
name = "tct-live-edit"
